рефакторинг бека(смол)